Fixed bugs with parser and fixed so all endpoint calls to the lists are working.

--- a/CoreBot/appsettings.json
+++ b/CoreBot/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DBConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=CoreDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DBConnection": "Server=(LocalDb)\\LocalDB;Database=CoreDB;User Id=SIGMA\\40114143;Password=;Trusted_Connection=True;"
   }
 }
